# gravity-mirage

./: .dockerignore  .gitignore  .prodignore  Dockerfile  Dockerfile.railway  README.md  pyproject.toml
.github/workflows/: check_build.yml
src/gravity_mirage/: __init__.py  physics.py  ray_tracer.py  web.py
src/gravity_mirage/core/: lensing.py  physics.py  ray_tracer.py
src/gravity_mirage/utils/: files.py
src/gravity_mirage/web/: __init__.py  constants.py
src/gravity_mirage/web/routers/: __init__.py  delete.py  exports.py  img.py  preview.py  uploads.py
src/gravity_mirage/web/templates/: index.html
src/gravity_mirage/web/utils/: files.py
src/gravity_mirage/web/workers/: __init__.py  gif.py
