[project]
name = "gravity-mirage"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harrison Pinto", email = "hpintom@unal.edu.co" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gravity-mirage = "gravity_mirage:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
