[project]
name = "gravity-mirage"
version = "2.0.0"
description = "Simulator that visually demostrates gravitational lensing caused by black holes"
readme = "README.md"
authors = [
    { name = "Harrison Pinto", email = "hpintom@unal.edu.co" },
    { name = "Camilo Contreras", email = "ccontrerasc@unal.edu.co" },
    { name = "Juan Rodriguez", email = "juarodriguezgo@unal.edu.co" },
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "pygame>=2.6.0",
    "Pillow>=12.0.0",
    "fastapi>=0.122.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
gravity-mirage = "gravity_mirage:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
    "UP",   # pyupgrade
    "FAST", # FastAPI - FastAPI-specific linting rules
    "S",    # Flake8-bandit - security issues
]
